--- a/_quarto.yml
+++ b/_quarto.yml
@@ -50,7 +50,9 @@ book:
     - syllabus.qmd  
     - tools.qmd
     - resources.qmd
+    - debugging.qmd
     - references.qmd
+    
 bibliography: references.bib
 execute: 
   freeze: auto
