--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,14 +23,15 @@ book:
       - EJtheory.qmd
       - EJtools.qmd
       - EJdata.qmd
+      - aviation.qmd
       - assignment2.qmd
        # - debt.qmd
-  #  - part: data.qmd
-  #    chapters:
-  #    - import2.qmd
-  #    - export.qmd
-  #    - munging.qmd
-  #    - import3.qmd
+    - part: data.qmd
+      chapters:
+      - import2.qmd
+      - export.qmd
+      - munging.qmd
+      - import3.qmd
   #    - assignment3.qmd  
   #  - part: projects.qmd  
   #    chapters: 
