--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,7 +32,7 @@ book:
       - export.qmd  
       - munging.qmd  
       - import3.qmd  
-  #    - assignment3.qmd  
+      - assignment3.qmd  
   #  - part: projects.qmd  
   #    chapters: 
   #    - shiny.qmd
