--- a/_quarto.yml
+++ b/_quarto.yml
@@ -40,6 +40,7 @@ book:
   #    - enviroVoters.qmd
       - research.qmd  
       - joins.qmd  
+      - advanced_maps.qmd  
   #    - maps4.qmd
   #    - markdown.qmd  
   #    - School_near_warehouses.qmd
