--- a/_quarto.yml
+++ b/_quarto.yml
@@ -40,7 +40,8 @@ book:
   #    - enviroVoters.qmd
       - research.qmd  
       - joins.qmd  
-      - advanced_maps.qmd  
+      - advanced_maps.qmd
+      - spatial_joins.qmd
   #    - maps4.qmd
   #    - markdown.qmd  
   #    - School_near_warehouses.qmd
